# FIT_CVUT_PA1

./: CMakeLists.txt
homeworks/: 07_easy.c  objectives.odt  test_script
homeworks/00/: 00_v1.c
homeworks/01/01_easy/: 01_easy_v1.c
homeworks/01_hard/: 01_hard_v1.cpp
homeworks/02_hard/: 02_hard_v1  02_hard_v1.c  out.txt
homeworks/02_hard/CZE/: 0001_in.txt
homeworks/02_hard/progtest-uloha-2-tezsi-varianta/: 0001.in.txt  0002.in.txt  0004.out.txt  0005.in.txt  0005.out.txt  0006.in.txt  0009.out.txt  0010.in.txt  0010.out.txt  0011.in.txt  0012.in.txt  0012.out.txt  0013.in.txt  0013.out.txt  0014.in.txt  0014.out.txt  0015.in.txt  0016.in.txt  0016.out.txt  0017.in.txt  0019.in.txt  0020.in.txt  0020.out.txt  0022.in.txt  0024.out.txt  0025.in.txt  0026.in.txt  0027.out.txt  0031.in.txt  0032.out.txt  0033.out.txt  0034.in.txt  0038.in.txt  0039.out.txt  0040.out.txt  0041.out.txt  0043.in.txt  0045.in.txt  0046.in.txt  0048.out.txt  (+853 more)
homeworks/03/03_easy/: 03_easy_v1.c
homeworks/03_easy/: 03_easy_v1  test.c
homeworks/03_hard/: 03_hard_v1  03_hard_v1.c
homeworks/04/04_easy/: 04_easy_v1.c
homeworks/04_easy/: 04_easy_v1.c
homeworks/04_easy/tests/: 0000_out.txt  0000_out_win.txt  0001_in.txt  0003_in.txt  (+11 more)
homeworks/05_easy/: 05_easy_v1.c
homeworks/05_hard/: 05_hard-v1.c  05_hard_v1.c  closestPairOfPoints.cpp
homeworks/06_easy/: 06_easy_v1.c  06_easy_v2.c  06_easy_v3.c
homeworks/06_hard/: 06_hard_v1-for_review.c  06_hard_v1.c
homeworks/07_hard/: 07_hard_v1.c
homeworks/08_easy/: 08_easy_v1.c
homeworks/08_hard/: 08_hard_v1.c
test/: test  test.c
(+948 files in other folders)
