cmake_minimum_required(VERSION 3.14)
project(homeworks)

set(CMAKE_CXX_STANDARD 14)


#add_executable(homeworks
#        homeworks/01_easy/01_easy_v1.c)

#add_executable(homeworks
#        homeworks/02_easy/02_easy_v1.c)

#add_executable(homeworks
#        homeworks/03_easy/03_easy_v1.c)

#add_executable(homeworks
#        homeworks/04_easy/04_easy_v1.c)

#add_executable(homeworks
##        homeworks/05_easy/05_easy_v1.c)
#add_executable(homeworks
#        homeworks/05_easy/05_easy_v2.c)

add_executable(homeworks
        homeworks/05_hard/05_hard_v1.c homeworks/05_hard/closestPairOfPoints.cpp)

#add_executable(homeworks
#        homeworks/06_easy/06_easy_v1.c)